overlap isue solved

--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -246,7 +246,7 @@ body {
     position: fixed; /* Keeps the button in a fixed position */
     bottom: 20px; /* Adjust the vertical position */
     right: 20px; /* Adjust the horizontal position */
-    background-color: #007bff; /* Button color (blue) */
+    background-color: #ff0000; /* Button color (blue) */
     color: white; /* Text color */
     border: none; /* Remove default border */
     border-radius: 10px; /* Rounded button */
